osha.theme Changelog
====================

1.5.29 (unreleased)
-------------------

- Nothing changed yet.


1.5.28 (2013-04-22)
-------------------

- Make enhanced oshnews portlet more robust [thomasw] 

1.5.27 (2013-04-18)
-------------------

- The oshnews portlet now has a correct language fallback to EN and
  excludes teasers #7106 [jure, thomasw]


1.5.26 (2013-04-17)
-------------------

- #6717 make it possible to scroll in overlay for vocabularies [thomasw]
- #5152: use the right i18n domains in default_error_message template [jure]
- replace '$' with 'jq' in osha.js to get rid of the error, refs #6914 [jure]
- read preferred language from request to make the language switcher work,
  refs #6718 [jure]
- add a vielwet that will display a "item has been deleted" message #7211 [thomasw]


1.5.25 (2013-04-08)
-------------------

- Modified the default error message template to use the new helper for fetching
  objects in the default language, refs #5152 [jure]
- OSHMail no longer depends on external service, but uses local code for
  inline styling [thomasw]
- Custom breadcrumbs for ESENER #5828 [thomasw]
- Custom breadcrumbs for FOP section #6920 [thomasw]
- #6693 Twitter async loader [deroiste]
- Bugfix for the publications portlet to display language neutral content #7222 [thomasw]

1.5.24 (2013-03-07)
-------------------

- #6661 Link OSHmail portlet title to oshmail [deroiste]
- #5626 Style bullets in document fallback portlets [deroiste]

1.5.23 (2013-02-15)
-------------------

- Correctly align european flag on the front-page. Fixes #6529 [mlarreategi]
- governingboard: METALError: duplicate macro definition: 'person' [deroiste]

1.5.22 (2013-01-31)
-------------------

- Fix for the PDF (publication) download tracking: since we now use https,
  a hardcoded "http" substitution does not work any more; we need to consider
  https [thomasw]

1.5.21 (2013-01-11)
-------------------
