@@ -963,6 +963,24 @@
      layer=".interfaces.IOSHAThemeLayer"
      />
 
+  <!-- OSHA Blog -->
+  <browser:page
+     for="Products.Archetypes.interfaces.base.IBaseFolder"
+     name="blog-view"
+     class=".blog.BlogView"
+     permission="zope.Public"
+     layer=".interfaces.IOSHAThemeLayer"
+     template="templates/blog_view.pt"
+     />
+
+  <browser:menuItem
+      for="Products.Archetypes.interfaces.base.IBaseFolder"
+      menu="plone_displayviews"
+      title="OSHA Blog view"
+      action="@@blog-view"
+      description="View for displaying blog entries"
+      />
+
   <!-- Renders an object in a different location of the site when passed the path to it #1150 -->
   <browser:page
      for="*"
