@@ -56,25 +56,29 @@
                          templateId=templateId, macro='text-field-view');
                          text here/getText|nothing"
              tal:condition="text"
-             tal:attributes="class python:test(here.Format() in ('text/structured',
-                                                   'text/x-rst', ), 'stx' + kss_class, 'plain' + kss_class)">
+             tal:attributes="class python:here.Format() in ('text/structured', 'text/x-rst', ) and ('stx' + kss_class) or ('plain' + kss_class)">
             <div metal:define-slot="inside" tal:replace="structure text">The body</div>
         </div>
 
         <metal:listingmacro define-macro="listing">
-        <tal:foldercontents define="contentFilter contentFilter|request/contentFilter|nothing;
-                            limit_display limit_display|request/limit_display|nothing;
+        <tal:foldercontents define="Batch python:modules['Products.CMFPlone.PloneBatch'].Batch;
+                            b_size python:10;
+                            b_start python:0;
+                            b_start request/b_start | b_start;
                             more_url more_url|request/more_url|string:folder_contents;
-                            contentsMethod python:test(here.portal_type=='Topic', here.queryCatalog, here.getFolderContents);
-                            folderContents folderContents|python:contentsMethod(contentFilter, batch=True);
-                            batch folderContents;
+                            limit_display limit_display|request/limit_display|nothing;
+
+                            folderContents view/get_blog_items;
+                            batch python:Batch(folderContents, b_size, int(b_start), orphan=1);
                             use_view_action site_properties/typesUseViewActionInListings|python:();
                             over_limit python: limit_display and len(folderContents) > limit_display;
                             folderContents python: (over_limit and folderContents[:limit_display]) or folderContents;
                             portal_discussion nocall:context/portal_discussion;
                             isDiscussionAllowedFor nocall:portal_discussion/isDiscussionAllowedFor;
                             getDiscussionFor nocall:portal_discussion/getDiscussionFor;
+                            wtool here/portal_workflow;
                             ">
+
         <tal:listing condition="folderContents">
 
             <tal:block tal:repeat="item folderContents">
@@ -93,26 +97,25 @@
                                        item_creator item/Creator;
                                        item_start item/start/ISO|item/StartDate|nothing;
                                        item_end item/end/ISO|item/EndDate|nothing;
-                                       item_object item/getObject;
-                                       talkback python:isDiscussionAllowedFor(item_object) and getDiscussionFor(item_object);
-                                       reply_count python:talkback is not False and talkback.replyCount(item_object);
-                                       item_text item_object/getText|nothing;"
+                                       talkback python:isDiscussionAllowedFor(item) and getDiscussionFor(item);
+                                       reply_count python:talkback is not False and talkback.replyCount(item);
+                                       item_text item/getText|nothing;"
                      tal:attributes="class string:tileItem visualIEFloatFix vevent ${item_type_class}">
 
                     <a href="#"
                        tal:condition="python:item_type != 'Link'"
-                       tal:attributes="href python:test(item_type in use_view_action, item_url+'/view', item_url);">
+                       tal:attributes="href python: item_type in use_view_action and (item_url+'/view') or item_url;">
                         <img src="" alt=""
-                             tal:condition="item_object/image_thumb|nothing"
-                             tal:replace="structure python: item_object.tag(scale='thumb', css_class='tileImage')" />
+                             tal:condition="item/image_thumb|nothing"
+                             tal:replace="structure python: item.tag(scale='thumb', css_class='tileImage')" />
                     </a>
 
                     <a href="#"
                        tal:condition="python:item_type == 'Link'"
-                       tal:attributes="href python:test(item_type in use_view_action, item_url+'/view', item_url);">
+                       tal:attributes="href python: item_type in use_view_action and (item_url+'/view') or item_url;">
                         <img src="" alt=""
-                             tal:condition="item_object/image_thumb|nothing"
-                             tal:replace="structure python: item_object.tag(scale='thumb', css_class='tileImage')" />
+                             tal:condition="item/image_thumb|nothing"
+                             tal:replace="structure python: item.tag(scale='thumb', css_class='tileImage')" />
                     </a>
 
                     <h2 class="tileHeadline"
@@ -121,7 +124,7 @@
                         <a href="#"
                            class="summary url"
                            tal:condition="python:item_type != 'Link'"
-                           tal:attributes="href python:test(item_type in use_view_action, item_url+'/view', item_url);"
+                           tal:attributes="href python: item_type in use_view_action and (item_url+'/view') or item_url;"
                            tal:content="item_title_or_id">
                             Item Title
                         </a>
@@ -210,7 +213,7 @@
                     <p class="tileFooter"
                        tal:condition="python: item_description and item_text">
                         <a href=""
-                           tal:attributes="href python:test(item_type in use_view_action, item_url+'/view', item_url);"
+                           tal:attributes="href python: item_type in use_view_action and (item_url+'/view') or item_url;"
                            i18n:translate="read_more">
                         Read More&hellip;
                         </a>
