@@ -4,7 +4,8 @@ osha.theme Changelog
 1.5.29 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- #6724: Added blog view which displays blog entries in selected language
+with fallback to default language [jure]
 
 
 1.5.28 (2013-04-22)
